Bug fix: Platform: Header menu might overlap username

--- a/Extension/css/ifttt.css
+++ b/Extension/css/ifttt.css
@@ -180,9 +180,7 @@ html .my-services h1 {
 		height: auto;
 		border-top-left-radius: 0;
 		border-top-right-radius: 0;
-		float: right;
 		font-size: 0.9em;
-		margin-left: auto;
 		order: 1;
 	}
 	
